Visible all board after game end. Add button on game end modal. Fix figure selection after game end.

--- a/frontend/src/modals/EndGameModal/styles.module.scss
+++ b/frontend/src/modals/EndGameModal/styles.module.scss
@@ -16,6 +16,6 @@
   align-items: center;
 
   .button {
-    margin-top: 20px;
+    margin: 20px 10px 0;
   }
 } 
